# routes/api.php
@@ -8,6 +8,8 @@ Route::apiResources([
     'todos' => TodoController::class,
 ]);
 
+Route::get('todos/search', [TodoController::class, 'search'])->name('todos.search');
+
 Route::middleware(['auth:sanctum'])->get('/user', function (Request $request) {
     return $request->user();
 });
