# storage/api-docs/api-docs.json
@@ -91,7 +91,7 @@
                     "Todos"
                 ],
                 "summary": "Create new todo item",
-                "description": "Colors are in hex format. There is the list of available colors: #ffffff, #ff0000, #00ff00, #0000ff, #ffff00, #00ffff, #ff00ff, #000000, #808080, #ff8000, #8000ff",
+                "description": "Colors are in hex format.",
                 "operationId": "ae1281faa0d4aef5c4f3e277c6a57e7c",
                 "requestBody": {
                     "required": true,
@@ -252,7 +252,7 @@
                     "Todos"
                 ],
                 "summary": "Update todo item",
-                "description": "Colors are in hex format. There is the list of available colors: #ffffff, #ff0000, #00ff00, #0000ff, #ffff00, #00ffff, #ff00ff, #000000, #808080, #ff8000, #8000ff",
+                "description": "Colors are in hex format.",
                 "operationId": "c10cfb143d3c35afe02449b07608baba",
                 "parameters": [
                     {
@@ -343,6 +343,120 @@
                     },
                     "404": {
                         "description": "Todo not found"
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum": []
+                    }
+                ]
+            }
+        },
+        "/todos/search": {
+            "get": {
+                "tags": [
+                    "Todos"
+                ],
+                "summary": "Search todo items",
+                "operationId": "b33895dd788de2c8ccd1a872377cf7be",
+                "parameters": [
+                    {
+                        "name": "search",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "favorite",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    {
+                        "name": "completed",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "boolean"
+                        }
+                    },
+                    {
+                        "name": "page",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 1
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "required": false,
+                        "schema": {
+                            "type": "integer",
+                            "default": 10
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "current_page": {
+                                            "type": "integer",
+                                            "example": 1
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "title": {
+                                                        "type": "string",
+                                                        "example": "Buy milk"
+                                                    },
+                                                    "description": {
+                                                        "type": "string",
+                                                        "example": "Buy milk"
+                                                    },
+                                                    "completed": {
+                                                        "type": "boolean",
+                                                        "example": false
+                                                    },
+                                                    "favorite": {
+                                                        "type": "boolean",
+                                                        "example": false
+                                                    },
+                                                    "color": {
+                                                        "type": "string",
+                                                        "example": "#ff0000"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
                     },
                     "500": {
                         "description": "Server error"
